--- a/src/BlindsInterview/wwwroot/ngApp/views/home.html
+++ b/src/BlindsInterview/wwwroot/ngApp/views/home.html
@@ -6,8 +6,8 @@
             <div>
                 <div layout="row">
                     <md-input-container>
-                        <label class="font">Band One</label>
-                        <md-select ng-change="vm.calculateValue()" ng-model="vm.selectedBandOne" class="selection" md-selected-text="vm.selectedBandOne.color">
+                        <label class="font-label">Band One</label>
+                        <md-select style="min-width: 120px;" ng-change="vm.calculateValue()" ng-model="vm.selectedBandOne" class="selection" md-selected-text="vm.selectedBandOne.color">
                             <md-optgroup label="Band One">
                                 <md-option ng-value="resistor" ng-repeat="resistor in vm.resistors" class="drop"> {{resistor.color}}</md-option>
                             </md-optgroup>
@@ -20,8 +20,8 @@
             <div>
                 <div layout="row">
                     <md-input-container>
-                        <label class="font">Band Two</label>
-                        <md-select ng-change="vm.calculateValue()" ng-model="vm.selectedBandTwo" class="selection" md-selected-text="vm.selectedBandTwo.color">
+                        <label class="font-label">Band Two</label>
+                        <md-select  style="min-width: 120px;" ng-change="vm.calculateValue()" ng-model="vm.selectedBandTwo" class="selection" md-selected-text="vm.selectedBandTwo.color">
                             <md-optgroup label="Band Two">
                                 <md-option ng-value="resistor" ng-repeat="resistor in vm.resistors" class="drop"> {{resistor.color}}</md-option>
                             </md-optgroup>
@@ -34,8 +34,8 @@
             <div>
                 <div layout="row">
                     <md-input-container>
-                        <label class="font">Band Three</label>
-                        <md-select ng-change="vm.calculateValue()" ng-model="vm.selectedBandThree" class="selection" md-selected-text="vm.selectedBandThree.color">
+                        <label class="font-label">Band Three</label>
+                        <md-select  style="min-width: 120px;" ng-change="vm.calculateValue()" ng-model="vm.selectedBandThree" class="selection" md-selected-text="vm.selectedBandThree.color">
                             <md-optgroup label="Band Three">
                                 
                                 <md-option ng-value="resistor" ng-repeat="resistor in vm.resistors" class="drop"> {{resistor.color}}</md-option>
@@ -49,8 +49,8 @@
             <div>
                 <div layout="row">
                     <md-input-container>
-                        <label class="font">Band Four</label>
-                        <md-select ng-change="vm.calculateValue()" ng-model="vm.selectedBandFour" class="selection" md-selected-text="vm.selectedBandFour.color">
+                        <label class="font-label">Band Four</label>
+                        <md-select  style="min-width: 120px;" ng-change="vm.calculateValue()" ng-model="vm.selectedBandFour" class="selection" md-selected-text="vm.selectedBandFour.color">
                             <md-optgroup label="Band Four">
                                 <md-option ng-value="resistor" ng-repeat="resistor in vm.resistors" class="drop" > {{resistor.color}}</md-option>
                             </md-optgroup>
@@ -84,11 +84,12 @@
         </div>
     </div>
     <div>
-        <h3 layout="column" layout-padding layout-align="center center" class="font">
+        <h2 layout="column" layout-padding layout-align="center center">Results</h2>
+        <h3 layout="column" layout-padding layout-align="center center" class="border-top">
             Value: {{vm.averageValue | number}} ohms
         </h3>
-        <h3 class="font">
-            Tolerance Value: {{vm.toleranceValue}}
+        <h3 class="top">
+            Tolerance Value: {{vm.toleranceValue * 100}}%
         </h3>
     </div>
 
